--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,6 @@ author:
     #   icon: "fab fa-fw fa-twitter-square"
     #   url: "https://x.com/milapp857"
    
-
-
 footer:
   links:
     # - label: "Twitter"
@@ -89,7 +87,10 @@ footer:
       icon: "fab fa-linkedin-in"
       url: "https://www.linkedin.com/in/milapp857/"
 
-
+collections:
+  projects:
+    output: true
+    permalink: /projects/:path/
 defaults:
   # _posts
   - scope:
