--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
-main:
-  - title: "Projects"
-    url: /projects/
-  - title: "Posts"
-    url: /posts/
-  - title: "Me as a Person"
-    url: /hobbies/
+# main:
+#   - title: "Projects"
+#     url: /projects/
+#   - title: "Posts"
+#     url: /posts/
+#   - title: "Me as a Person"
+#     url: /hobbies/
